# asian-job-scout

./: .env.example  .gitignore  README.md  architecture.html  langgraph-diagram.html  pyproject.toml  render.yaml  run_bot.py  run_pipeline.py  run_scraper.py  run_summarizer.py
bot/: agent.py  formatting.py  guardrails.py  handlers.py  health.py  main.py  observability.py  tools.py
data/japan/: jobs_2026-03-05.txt  jobs_2026-04-13.txt  summaries_2026-03-05.txt  summaries_2026-04-04.txt
data/korea/: jobs_2026-04-02.txt  jobs_2026-04-04.txt  jobs_2026-04-13.txt  summaries_2026-04-02.txt  summaries_2026-04-04.txt  summaries_2026-04-13.txt
data/thailand/: jobs_2026-04-02.txt  jobs_2026-04-04.txt  jobs_2026-04-13.txt  summaries_2026-04-02.txt  summaries_2026-04-04.txt  summaries_2026-04-13.txt
db/: __init__.py  client.py  models.py
pipeline/: __init__.py  orchestrator.py
scrapers/: base.py
scrapers/japan/: rikunabi.py
scrapers/korea/: wanted.py
scrapers/thailand/: jobsdb.py
summarizers/: summarizer.py
